# AI-Lyrics

./: .gitignore  Blueprint_de_Implementacao.md  DOCUMENTACAO_TECNICA.md  Guia_de_Desenvolvimento.md  Plano_de_Implementacao.md  Relatorio_Backend_Capability_Audit.md  Relatorio_Console_Operacional.md  Relatorio_Evidence_Layer.md  Relatorio_Fase_10_Continuous_Evaluation.md  Relatorio_Fase_11_Sermon_Intelligence.md  Relatorio_Fase_12_1_Event_Store.md  Relatorio_Fase_12_Streaming_Pipeline.md  Relatorio_Fase_8_Sermon_Context_Engine.md  Relatorio_Fase_9_Feedback_Learning.md  Relatorio_Presentation_Layer.md  Relatorio_Sprint_13_Data_Integration.md  Relatorio_Sprint_14_Backend_Capability.md  Relatorio_Sprint_15_1_Live_Audio_Capture.md  Relatorio_Sprint_17_3_STT_Runtime_Audit.md  Relatorio_Web_UI_Architecture_Freeze.md  Relatorio_Web_UI_Foundation.md  Relatorio_Web_UI_Real_Integration.md  _bench_searcher_threadsafe.py  _bench_sprint19_1_gpu.py  _bench_sprint19_2.py  _check_health.py  _check_holyrics_test.py  _demo_sprint20.py  _demo_sprint21.py  _demo_sprint21_1.py  _diag_abram.txt  _diag_acf.py  _diag_audio_flow.py  _diag_books.txt  _diag_daniel.py  _diag_daniel.txt  _diag_drain.py  _diag_extra.txt  _diag_extra2.txt  _diag_filip.py  (+34 more)
.devin/rules/: evitar-erro-falta-memoria.md
api/: __init__.py  app.py
api/dependencies/: __init__.py  services.py
api/exceptions/: __init__.py  handlers.py
api/health/: __init__.py  checks.py
api/middlewares/: __init__.py  setup.py
api/routers/: __init__.py  audio.py  configuration.py  diagnostics.py  events.py  health.py  info.py  metrics.py  pipeline.py  session.py  system.py
api/schemas/: __init__.py  models.py
api/startup/: __init__.py  composition.py
api/websocket/: __init__.py  audio_events.py  events.py
busca/: __init__.py  bible_reference.py  biblical_entity.py  embedding_index.py  embedding_provider.py  embedding_searcher.py  exceptions.py  indexer.py  knowledge_enricher.py  models.py  query_planner.py  ranking.py  reranker.py  searcher.py
config/: __init__.py  books.json  books.py  config.overrides.json  config.yaml  knowledge_base.json  loader.py  models.py  persistence.py
context/: __init__.py  dtos.py  engine.py  events.py
core/: __init__.py  confirmation.py  decision.py  exceptions.py  hardware.py  pipeline.py  pipeline_metrics.py  pipeline_orchestrator.py  pipeline_stages.py  types.py
data/: bible.embeddings.json  bible.pt-br.sqlite.bak  bible_source.json
estado/: __init__.py  state.py
evaluation/: __init__.py  dtos.py  engine.py  events.py  metrics.py  policy.py  regressions.py  reports.py  repository.py  store.py
examples/: __init__.py  use_books.py  use_capture.py  use_config.py  use_decision.py  use_hardware.py  use_holyrics.py  use_indexer_import.py  use_indexer_rebuild.py  use_normalizer.py  use_parser.py  use_searcher.py  use_state.py  use_stt.py
feedback/: __init__.py  adapter.py  dtos.py  engine.py  events.py  policy.py  repository.py  store.py
frontend/: _diag_health.cjs  _diag_playwright.cjs  _diag_playwright.mjs  _diag_playwright2.cjs  _testout.txt  index.html  op_test.txt  package-lock.json  package.json  tailwind.config.js  test_out.txt  tsconfig.json  vite.config.ts
frontend/docs/: ARCHITECTURE.md
frontend/src/: main.tsx
frontend/tests/: components.test.tsx  console.test.tsx  contexts.test.tsx  event-stream-optimization.test.tsx  hooks.test.tsx  infrastructure-integration.test.tsx  infrastructure.test.tsx  integration.test.tsx  layout.test.tsx  operational.test.tsx  pipeline-control.test.tsx  reference-panel.test.tsx  routing.test.tsx  sdk-cancel.test.ts  sdk-client.test.ts  sdk-errors.test.ts  sdk-real-client.test.ts  sdk-versioning.test.ts  (+7 more)
installer/: ai-lyrics.iss
integracao_holyrics/: __init__.py  client.py  exceptions.py  models.py
intelligence/: __init__.py  combiner.py  coordinator.py  dtos.py  engine.py  evidence.py  policy.py  signals.py  strategies.py
llm/: __init__.py  client.py  prompts.py
microfone/: __init__.py  audio_capture_service.py  capture.py  ring_buffer.py  sliding_window.py  speech_pipeline.py  speech_queue.py  speech_worker.py  streaming_stt_service.py  stt_executor.py
parser/: __init__.py  books.py  normalizer.py  parser.py
pipeline/: __init__.py  bus.py  coordinator.py  engine.py  event_store.py  events.py  handlers.py  handlers_aux.py  handlers_base.py  incremental_parser.py  metadata.py  metrics.py  nlu.py  policy.py  session.py  state.py  streaming_metrics.py
presentation/: __init__.py  adapters.py  dtos.py  dtos_domain.py  dtos_system.py  health_checks.py  mappers.py  observers.py  services.py  services_system.py  snapshots.py  verse_presentation_service.py
semantic/: __init__.py  backend_factory.py  cache.py  capability_cache.py  context_engine.py  engine.py  llm_backend.py  local_provider.py  ollama_backend.py  openai_backend.py  provider.py  resolver.py  thinking_sanitizer.py  types.py
sermon/: __init__.py  engine.py  types.py
tests/: conftest.py  test_api.py  test_audio_capture_service.py  test_audio_endpoints.py  test_audio_events.py  test_bible_reference.py  test_biblical_entity.py  test_biblical_nlu.py  test_capture.py  test_config.py  test_config_persistence.py  test_confirmation.py  test_decision.py  test_embeddings.py  test_evaluation_dtos.py  test_evaluation_engine_metrics.py  test_evaluation_policy_store.py  test_evaluation_reports_scenarios.py  test_event_store.py  test_event_stream_optimization.py  test_evidence_integration.py  test_evidence_layer.py  test_feedback_dtos.py  test_feedback_engine_adapter.py  test_feedback_policy_store.py  test_feedback_scenarios.py  test_hardware.py  test_holyrics.py  test_indexer.py  test_integration_smoke.py  test_intelligence_dtos.py  test_intelligence_engine.py  test_intelligence_strategies.py  test_knowledge_enricher.py  test_llm.py  test_llm_pipeline_integration.py  test_normalizer.py  test_parser.py  test_parser_books.py  test_pipeline.py  (+33 more)
tools/: migrate_bible_db.py
transcricao/: __init__.py  backend_fallback.py  backend_selector.py  directml_backend.py  inference_backend.py  stt.py
(+130 files in other folders)
